tests/compile_fail/object_without_context_scope.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/object_without_context_scope.rs:6:33
  |
6 |   let _object = v8::Object::new(&*scope);
  |                 --------------- ^^^^^^^ expected `&PinnedRef<'_, HandleScope<'_>>`, found `&PinnedRef<'_, HandleScope<'_, ()>>`
  |                 |
  |                 arguments to this function are incorrect
  |
  = note: expected reference `&PinnedRef<'_, HandleScope<'_, v8::Context>>`
             found reference `&PinnedRef<'_, HandleScope<'_, ()>>`
note: associated function defined here
 --> src/object.rs
  |
  |   pub fn new<'s>(scope: &PinScope<'s, '_>) -> Local<'s, Object> {
  |          ^^^
